2001-08-20  H.J. Lu  <hjl@gnu.org>

	* elf-bfd.h (elf_obj_tdata): Add num_section_syms.
	(elf_num_section_syms): New for num_section_syms.

	* elf.c (elf_map_symbols): Set num_section_syms.
	(_bfd_elf_symbol_from_bfd_symbol): Check num_section_syms for
	the section symbol index.

2001-08-20  Nick Clifton  <nickc@cambridge.redhat.com>

	* elfxx-target.h (bfd_elfNN_bfd_link_hash_table_create): Never
	select the generic has table creator.  All elf backends need elf
	specific fields in the hash table.

2001-08-20  Alan Modra  <amodra@bigpond.net.au>

	* archive.c (offsetof): Remove define.
	* elf.c: Likewise.
	* oasys.c: Likewise
	* sysdep.h (offsetof): Define.

2001-08-17  Alan Modra  <amodra@bigpond.net.au>

	* bfd.c (bfd_get_gp_size): Return an unsigned int.
	(bfd_set_gp_size): Make param unsigned.
	* bfd-in2.h: Regenerate.
	* elf32-ppc.c (ppc_elf_add_symbol_hook): Use elf_gp_size rather
	than calling bfd_get_gp_size.
	* elf64-alpha.c (elf64_alpha_add_symbol_hook): Likewise.
	* elfxx-ia64.c (elfNN_ia64_add_symbol_hook): Likewise.

2001-08-17  Alan Modra  <amodra@bigpond.net.au>

	* linker.c (default_fill_link_order): Handle four byte fill value.

2001-08-17  Alan Modra  <amodra@bigpond.net.au>

	* elf64-sparc.c (sparc64_elf_output_arch_syms): Add missing
	prototype.
	* nlm32-alpha.c (nlm_alpha_write_external): Fix warning.

	* elf64-mips.c (UNUSED_RELOC): Define.
	(mips_elf64_howto_table_rel): Use it.
	(mips_elf64_howto_table_rela): Here too.
	(mips_elf64_write_relocs): Fix signed/unsigned warning.

	* coffcode.h (coff_write_object_contents): Add ATTRIBUTE_UNUSED to
	silence warning.
	* coffgen.c (coff_print_symbol): Fix warnings.
	(coff_find_nearest_line): Likewise.
	* cofflink.c (_bfd_coff_link_input_bfd): Likewise.
	* coff-alpha.c (alpha_convert_external_reloc): Likewise.
	* format.c (bfd_check_format_matches): Likewise.
	(bfd_set_format): Likewise.
	* coff-ia64.c: Add missing prototypes.
	* elf64-alpha.c (struct alpha_elf_link_hash_entry): Make addend